se modifico cosas

--- a/Pag2.html
+++ b/Pag2.html
@@ -8,8 +8,13 @@
 </head>
 <body>
     <div class="container">
-        <h1>Deportes Que Se Practican</h1>
+        <h1>CANOTAJE</h1>
+        <img src="img/Canotaje.jpg" alt="Descripción de la imagen" class="content-image">
+        <div class="text-content">
+            <p>Es la principal arteria fluvial del municipio de San Gil y atracción turística del departamento, es conocido por sus frecuentes actividades de canotaje.</p>
+        </div>
         <a href="index.html" class="btn">Volver a la Página Principal</a>
     </div>
 </body>
 </html>
+
