--- a/Pag3.html
+++ b/Pag3.html
@@ -3,12 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página 3</title>
+    <title>Página 2</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <h1>Nacimiento y Desemboque Del Rio</h1>
+        <h1>Nacimiento y desemboque</h1>
+        <img src="img/rio.jpg" alt="Descripción de la imagen" class="content-image">
+        <div class="text-content">
+            <p>Nacimiento del Río Fonce:
+                El río Fonce nace en el páramo de Almorzadero, que se encuentra en la vertiente oriental de la cordillera de los Andes. Este páramo está ubicado a una altitud de aproximadamente 3,800 metros sobre el nivel del mar. El páramo de Almorzadero es una región de alta montaña caracterizada por su biodiversidad y su papel crucial en la regulación hídrica de la región. Las aguas que alimentan al río Fonce provienen de múltiples manantiales y arroyos que se originan en este ecosistema de alta montaña.</p>
+                
+
+               <p> Recorrido:
+                Después de su nacimiento, el río Fonce desciende por la cordillera y atraviesa varias localidades antes de llegar a San Gil, la principal ciudad que se encuentra a orillas de este río. A lo largo de su recorrido, el río recibe aguas de varios afluentes menores, lo que incrementa su caudal y su importancia como fuente de agua para las comunidades locales y para la agricultura.</p>
+                
+
+                <p>Desemboque del Río Fonce:
+                El río Fonce desemboca en el río Suárez. Este punto de confluencia se encuentra cerca de la localidad de Simacota, después de que el río Fonce ha recorrido una distancia considerable desde su nacimiento en el páramo de Almorzadero. El río Suárez, a su vez, es un afluente del río Magdalena, el principal río de Colombia, que fluye hacia el norte y finalmente desemboca en el mar Caribe.</p>
+        </div>
         <a href="index.html" class="btn">Volver a la Página Principal</a>
     </div>
 </body>
