--- a/Pag4.html
+++ b/Pag4.html
@@ -3,12 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página 4</title>
+    <title>Página 2</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <h1>Contaminación Del Rio</h1>
+        <h1>CONTAMINACIÓN DEL RIO FONCE</h1>
+        <img src="img/picho.jpg" alt="Descripción de la imagen" class="content-image">
+        <div class="text-content">
+            <p>La contaminación del río Fonce es un problema significativo que afecta tanto al medio ambiente como a las comunidades locales en la región de Santander, Colombia. A continuación se detallan las principales causas, efectos y esfuerzos de mitigación relacionados con la contaminación del río Fonce.</p>
+            <h2>Causas de la Contaminación</h2>
+            <p>1.Aguas Residuales Domésticas: Muchas localidades a lo largo del río, incluida San Gil, descargan sus aguas residuales sin tratar o con tratamiento insuficiente directamente en el río. Esto introduce una gran cantidad de materia orgánica, bacterias y patógenos.</p>
+            <p>2.Residuos Industriales: Las actividades industriales en la región, aunque no tan intensas, también contribuyen a la contaminación del río. Estas incluyen pequeñas fábricas, talleres y otras instalaciones que pueden liberar sustancias químicas y metales pesados al agua.</p>
+            <p>3.Agricultura y Ganadería: El uso intensivo de fertilizantes y pesticidas en la agricultura contamina el río a través de la escorrentía superficial. Además, la ganadería contribuye con desechos orgánicos y nutrientes que pueden llevar a la eutrofización del agua.</p>
+            <p>4.Turismo y Recreación: Aunque el turismo es una fuente importante de ingresos para la región, la afluencia de turistas también genera residuos sólidos y líquidos. Las actividades recreativas, como el rafting y el camping, a menudo resultan en la acumulación de basura y desechos en el río y sus alrededores.</p>
+        </div>
         <a href="index.html" class="btn">Volver a la Página Principal</a>
     </div>
 </body>
