--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="button-container">
             <a href="pag1.html" class="btn">Historia</a>
             <a href="Pag2.html" class="btn">Deportes</a>
-            <a href="Pag.html" class="btn">Nace y Desemboca</a>
+            <a href="Pag3.html" class="btn">Nace y Desemboca</a>
             <a href="Pag4.html" class="btn">Contaminación</a>
         </div>
     </div>
