--- a/pag1.html
+++ b/pag1.html
@@ -8,8 +8,22 @@
 </head>
 <body>
     <div class="container">
-        <h1>Bienvenido a la Historia del Rio Fonce</h1>
+        <h1>Bienvenido a la Historia Del Rio Fonce</h1>
+        <div class="bio">
+            <h2>Historia</h2>
+            <p>El río era llamado anteriormente por los aborígenes como el río Monchuelo. Al fundar la ciudad de San Gil, se le dio el nombre “San Gil”. Existe la tradición que a orillas del río cerca a Valle de San José había una hacienda de una familia de apellido Fonce, y así el río recibió el nombre como se le conoce, hoy en día.</p>
+            <p>El río Fonce nace en la vertiente oriental de la cordillera de los Andes, específicamente en el páramo de Almorzadero, a más de 3,800 metros sobre el nivel del mar. Su nombre "Fonce" proviene de la lengua indígena Chibcha y significa "río de las mujeres".</p>
+            <p>Hoy en día, el río Fonce es un atractivo turístico importante, especialmente para quienes disfrutan de deportes extremos como el rafting y el kayaking. San Gil se ha convertido en un destino popular para el turismo de aventura, gracias en gran parte a las aguas rápidas del río.
+
+                El río también sigue siendo crucial para la agricultura local, proporcionando agua para el riego de cultivos y contribuyendo a la biodiversidad de la región. Sin embargo, la creciente urbanización y el turismo también han traído desafíos, como la contaminación y la necesidad de una gestión sostenible de los recursos hídricos.
+                
+                Conservación y Sostenibilidad
+                En los últimos años, se han implementado diversas iniciativas para la conservación del río Fonce. Estas incluyen campañas de limpieza, educación ambiental para la comunidad local y los turistas, y proyectos para mejorar la gestión de las aguas residuales y la protección de los ecosistemas fluviales.
+                
+                El río Fonce no solo es un testimonio del pasado histórico de San Gil y la región de Santander, sino también un recurso vital que necesita ser protegido para las generaciones futuras.</p>
+        </div>
         <a href="index.html" class="btn">Volver a la Página Principal</a>
     </div>
 </body>
 </html>
+
