se modifico cosas

--- a/Pag2.html
+++ b/Pag2.html
@@ -13,6 +13,12 @@
         <div class="text-content">
             <p>Es la principal arteria fluvial del municipio de San Gil y atracción turística del departamento, es conocido por sus frecuentes actividades de canotaje.</p>
         </div>
+        <h1>Rafting</h1>
+        <img src="img/ras.jpeg" alt="Descripción de la imagen" class="content-image">
+        <div class="text-content">
+            <p>Descripción: El rafting es uno de los deportes más populares en el río Fonce. Consiste en descender el río en balsas inflables, sorteando rápidos y corrientes.</p>
+            <p>Niveles de Dificultad: El río ofrece secciones para diferentes niveles de habilidad, desde principiantes hasta avanzados, con rápidos que varían en intensidad.</p>
+        </div>
         <a href="index.html" class="btn">Volver a la Página Principal</a>
     </div>
 </body>
