--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div class="container">
+        <h1 class="main-title">RIO FONCE</h1>
         <div class="button-container">
             <a href="pag1.html" class="btn">Historia</a>
             <a href="Pag2.html" class="btn">Deportes</a>
